freest/test/prog/Invalid/Typing/GivenTooManyArgs/GivenTooManyArgs.fst
module GivenTooManyArgs where

f : Int -> Int
f x = x

g = f 1 2